ctpgo/cctptrade_api_darwin.h

// 保证金监控中心用户令牌
DLL_EXPORT_C_DECL void WPCTP tOnRtnCFMMCTradingAccountToken(void* spi, void* func);
// 批量报单操作错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnBatchOrderAction(void* spi, void* func);
// 期权自对冲通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnOptionSelfClose(void* spi, void* func);
// 期权自对冲录入错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnOptionSelfCloseInsert(void* spi, void* func);
// 期权自对冲操作错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnOptionSelfCloseAction(void* spi, void* func);
// 申请组合通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnCombAction(void* spi, void* func);
// 申请组合录入错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnCombActionInsert(void* spi, void* func);
// 请求查询签约银行响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryContractBank(void* spi, void* func);
// 请求查询预埋单响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryParkedOrder(void* spi, void* func);
// 请求查询预埋撤单响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryParkedOrderAction(void* spi, void* func);
// 请求查询交易通知响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTradingNotice(void* spi, void* func);
// 请求查询经纪公司交易参数响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryBrokerTradingParams(void* spi, void* func);
// 请求查询经纪公司交易算法响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryBrokerTradingAlgos(void* spi, void* func);
// 请求查询监控中心用户令牌
DLL_EXPORT_C_DECL void WPCTP tOnRspQueryCFMMCTradingAccountToken(void* spi, void* func);
// 银行发起银行资金转期货通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnFromBankToFutureByBank(void* spi, void* func);
// 银行发起期货资金转银行通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnFromFutureToBankByBank(void* spi, void* func);
// 银行发起冲正银行转期货通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromBankToFutureByBank(void* spi, void* func);
// 银行发起冲正期货转银行通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromFutureToBankByBank(void* spi, void* func);
// 期货发起银行资金转期货通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnFromBankToFutureByFuture(void* spi, void* func);
// 期货发起期货资金转银行通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnFromFutureToBankByFuture(void* spi, void* func);
// 系统运行时期货端手工发起冲正银行转期货请求，银行处理完毕后报盘发回的通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromBankToFutureByFutureManual(void* spi, void* func);
// 系统运行时期货端手工发起冲正期货转银行请求，银行处理完毕后报盘发回的通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromFutureToBankByFutureManual(void* spi, void* func);
// 期货发起查询银行余额通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnQueryBankBalanceByFuture(void* spi, void* func);
// 期货发起银行资金转期货错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnBankToFutureByFuture(void* spi, void* func);
// 期货发起期货资金转银行错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnFutureToBankByFuture(void* spi, void* func);
// 系统运行时期货端手工发起冲正银行转期货错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnRepealBankToFutureByFutureManual(void* spi, void* func);
// 系统运行时期货端手工发起冲正期货转银行错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnRepealFutureToBankByFutureManual(void* spi, void* func);
// 期货发起查询银行余额错误回报
DLL_EXPORT_C_DECL void WPCTP tOnErrRtnQueryBankBalanceByFuture(void* spi, void* func);
// 期货发起冲正银行转期货请求，银行处理完毕后报盘发回的通知
DLL_EXPORT_C_DECL void WPCTP tOnRtnRepealFromBankToFutureByFuture(void* spi, void* func);