pyctp/macos/ctptrade_api.py

        self.FP_OnRtnCFMMCTradingAccountToken = CFUNCTYPE(None, POINTER(CThostFtdcCFMMCTradingAccountTokenField))(self.__OnRtnCFMMCTradingAccountToken)
        self.h.tOnRtnCFMMCTradingAccountToken(self.pSpi, self.FP_OnRtnCFMMCTradingAccountToken)
        # 批量报单操作错误回报
        self.h.tOnErrRtnBatchOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnBatchOrderAction.restype = None
        self.FP_OnErrRtnBatchOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcBatchOrderActionField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnBatchOrderAction)
        self.h.tOnErrRtnBatchOrderAction(self.pSpi, self.FP_OnErrRtnBatchOrderAction)
        # 期权自对冲通知
        self.h.tOnRtnOptionSelfClose.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnOptionSelfClose.restype = None
        self.FP_OnRtnOptionSelfClose = CFUNCTYPE(None, POINTER(CThostFtdcOptionSelfCloseField))(self.__OnRtnOptionSelfClose)
        self.h.tOnRtnOptionSelfClose(self.pSpi, self.FP_OnRtnOptionSelfClose)
        # 期权自对冲录入错误回报
        self.h.tOnErrRtnOptionSelfCloseInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnOptionSelfCloseInsert.restype = None
        self.FP_OnErrRtnOptionSelfCloseInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputOptionSelfCloseField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnOptionSelfCloseInsert)
        self.h.tOnErrRtnOptionSelfCloseInsert(self.pSpi, self.FP_OnErrRtnOptionSelfCloseInsert)
        # 期权自对冲操作错误回报
        self.h.tOnErrRtnOptionSelfCloseAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnOptionSelfCloseAction.restype = None
        self.FP_OnErrRtnOptionSelfCloseAction = CFUNCTYPE(None, POINTER(CThostFtdcOptionSelfCloseActionField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnOptionSelfCloseAction)
        self.h.tOnErrRtnOptionSelfCloseAction(self.pSpi, self.FP_OnErrRtnOptionSelfCloseAction)
        # 申请组合通知
        self.h.tOnRtnCombAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnCombAction.restype = None
        self.FP_OnRtnCombAction = CFUNCTYPE(None, POINTER(CThostFtdcCombActionField))(self.__OnRtnCombAction)
        self.h.tOnRtnCombAction(self.pSpi, self.FP_OnRtnCombAction)
        # 申请组合录入错误回报
        self.h.tOnErrRtnCombActionInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnCombActionInsert.restype = None
        self.FP_OnErrRtnCombActionInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputCombActionField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnCombActionInsert)
        self.h.tOnErrRtnCombActionInsert(self.pSpi, self.FP_OnErrRtnCombActionInsert)
        # 请求查询签约银行响应
        self.h.tOnRspQryContractBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryContractBank.restype = None
        self.FP_OnRspQryContractBank = CFUNCTYPE(None, POINTER(CThostFtdcContractBankField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryContractBank)
        self.h.tOnRspQryContractBank(self.pSpi, self.FP_OnRspQryContractBank)
        # 请求查询预埋单响应
        self.h.tOnRspQryParkedOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryParkedOrder.restype = None
        self.FP_OnRspQryParkedOrder = CFUNCTYPE(None, POINTER(CThostFtdcParkedOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryParkedOrder)
        self.h.tOnRspQryParkedOrder(self.pSpi, self.FP_OnRspQryParkedOrder)
        # 请求查询预埋撤单响应
        self.h.tOnRspQryParkedOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryParkedOrderAction.restype = None
        self.FP_OnRspQryParkedOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcParkedOrderActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryParkedOrderAction)
        self.h.tOnRspQryParkedOrderAction(self.pSpi, self.FP_OnRspQryParkedOrderAction)
        # 请求查询交易通知响应
        self.h.tOnRspQryTradingNotice.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTradingNotice.restype = None
        self.FP_OnRspQryTradingNotice = CFUNCTYPE(None, POINTER(CThostFtdcTradingNoticeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTradingNotice)
        self.h.tOnRspQryTradingNotice(self.pSpi, self.FP_OnRspQryTradingNotice)
        # 请求查询经纪公司交易参数响应
        self.h.tOnRspQryBrokerTradingParams.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryBrokerTradingParams.restype = None
        self.FP_OnRspQryBrokerTradingParams = CFUNCTYPE(None, POINTER(CThostFtdcBrokerTradingParamsField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryBrokerTradingParams)
        self.h.tOnRspQryBrokerTradingParams(self.pSpi, self.FP_OnRspQryBrokerTradingParams)
        # 请求查询经纪公司交易算法响应
        self.h.tOnRspQryBrokerTradingAlgos.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryBrokerTradingAlgos.restype = None
        self.FP_OnRspQryBrokerTradingAlgos = CFUNCTYPE(None, POINTER(CThostFtdcBrokerTradingAlgosField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryBrokerTradingAlgos)
        self.h.tOnRspQryBrokerTradingAlgos(self.pSpi, self.FP_OnRspQryBrokerTradingAlgos)
        # 请求查询监控中心用户令牌
        self.h.tOnRspQueryCFMMCTradingAccountToken.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQueryCFMMCTradingAccountToken.restype = None
        self.FP_OnRspQueryCFMMCTradingAccountToken = CFUNCTYPE(None, POINTER(CThostFtdcQueryCFMMCTradingAccountTokenField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQueryCFMMCTradingAccountToken)
        self.h.tOnRspQueryCFMMCTradingAccountToken(self.pSpi, self.FP_OnRspQueryCFMMCTradingAccountToken)
        # 银行发起银行资金转期货通知
        self.h.tOnRtnFromBankToFutureByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnFromBankToFutureByBank.restype = None
        self.FP_OnRtnFromBankToFutureByBank = CFUNCTYPE(None, POINTER(CThostFtdcRspTransferField))(self.__OnRtnFromBankToFutureByBank)
        self.h.tOnRtnFromBankToFutureByBank(self.pSpi, self.FP_OnRtnFromBankToFutureByBank)
        # 银行发起期货资金转银行通知
        self.h.tOnRtnFromFutureToBankByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnFromFutureToBankByBank.restype = None
        self.FP_OnRtnFromFutureToBankByBank = CFUNCTYPE(None, POINTER(CThostFtdcRspTransferField))(self.__OnRtnFromFutureToBankByBank)
        self.h.tOnRtnFromFutureToBankByBank(self.pSpi, self.FP_OnRtnFromFutureToBankByBank)
        # 银行发起冲正银行转期货通知
        self.h.tOnRtnRepealFromBankToFutureByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnRepealFromBankToFutureByBank.restype = None
        self.FP_OnRtnRepealFromBankToFutureByBank = CFUNCTYPE(None, POINTER(CThostFtdcRspRepealField))(self.__OnRtnRepealFromBankToFutureByBank)
        self.h.tOnRtnRepealFromBankToFutureByBank(self.pSpi, self.FP_OnRtnRepealFromBankToFutureByBank)
        # 银行发起冲正期货转银行通知
        self.h.tOnRtnRepealFromFutureToBankByBank.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnRepealFromFutureToBankByBank.restype = None
        self.FP_OnRtnRepealFromFutureToBankByBank = CFUNCTYPE(None, POINTER(CThostFtdcRspRepealField))(self.__OnRtnRepealFromFutureToBankByBank)
        self.h.tOnRtnRepealFromFutureToBankByBank(self.pSpi, self.FP_OnRtnRepealFromFutureToBankByBank)
        # 期货发起银行资金转期货通知
        self.h.tOnRtnFromBankToFutureByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnFromBankToFutureByFuture.restype = None
        self.FP_OnRtnFromBankToFutureByFuture = CFUNCTYPE(None, POINTER(CThostFtdcRspTransferField))(self.__OnRtnFromBankToFutureByFuture)
        self.h.tOnRtnFromBankToFutureByFuture(self.pSpi, self.FP_OnRtnFromBankToFutureByFuture)
        # 期货发起期货资金转银行通知
        self.h.tOnRtnFromFutureToBankByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnFromFutureToBankByFuture.restype = None
        self.FP_OnRtnFromFutureToBankByFuture = CFUNCTYPE(None, POINTER(CThostFtdcRspTransferField))(self.__OnRtnFromFutureToBankByFuture)
        self.h.tOnRtnFromFutureToBankByFuture(self.pSpi, self.FP_OnRtnFromFutureToBankByFuture)
        # 系统运行时期货端手工发起冲正银行转期货请求，银行处理完毕后报盘发回的通知
        self.h.tOnRtnRepealFromBankToFutureByFutureManual.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnRepealFromBankToFutureByFutureManual.restype = None
        self.FP_OnRtnRepealFromBankToFutureByFutureManual = CFUNCTYPE(None, POINTER(CThostFtdcRspRepealField))(self.__OnRtnRepealFromBankToFutureByFutureManual)
        self.h.tOnRtnRepealFromBankToFutureByFutureManual(self.pSpi, self.FP_OnRtnRepealFromBankToFutureByFutureManual)
        # 系统运行时期货端手工发起冲正期货转银行请求，银行处理完毕后报盘发回的通知
        self.h.tOnRtnRepealFromFutureToBankByFutureManual.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnRepealFromFutureToBankByFutureManual.restype = None
        self.FP_OnRtnRepealFromFutureToBankByFutureManual = CFUNCTYPE(None, POINTER(CThostFtdcRspRepealField))(self.__OnRtnRepealFromFutureToBankByFutureManual)
        self.h.tOnRtnRepealFromFutureToBankByFutureManual(self.pSpi, self.FP_OnRtnRepealFromFutureToBankByFutureManual)
        # 期货发起查询银行余额通知
        self.h.tOnRtnQueryBankBalanceByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnQueryBankBalanceByFuture.restype = None
        self.FP_OnRtnQueryBankBalanceByFuture = CFUNCTYPE(None, POINTER(CThostFtdcNotifyQueryAccountField))(self.__OnRtnQueryBankBalanceByFuture)
        self.h.tOnRtnQueryBankBalanceByFuture(self.pSpi, self.FP_OnRtnQueryBankBalanceByFuture)
        # 期货发起银行资金转期货错误回报
        self.h.tOnErrRtnBankToFutureByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnBankToFutureByFuture.restype = None
        self.FP_OnErrRtnBankToFutureByFuture = CFUNCTYPE(None, POINTER(CThostFtdcReqTransferField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnBankToFutureByFuture)
        self.h.tOnErrRtnBankToFutureByFuture(self.pSpi, self.FP_OnErrRtnBankToFutureByFuture)
        # 期货发起期货资金转银行错误回报
        self.h.tOnErrRtnFutureToBankByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnFutureToBankByFuture.restype = None
        self.FP_OnErrRtnFutureToBankByFuture = CFUNCTYPE(None, POINTER(CThostFtdcReqTransferField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnFutureToBankByFuture)
        self.h.tOnErrRtnFutureToBankByFuture(self.pSpi, self.FP_OnErrRtnFutureToBankByFuture)
        # 系统运行时期货端手工发起冲正银行转期货错误回报
        self.h.tOnErrRtnRepealBankToFutureByFutureManual.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnRepealBankToFutureByFutureManual.restype = None
        self.FP_OnErrRtnRepealBankToFutureByFutureManual = CFUNCTYPE(None, POINTER(CThostFtdcReqRepealField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnRepealBankToFutureByFutureManual)
        self.h.tOnErrRtnRepealBankToFutureByFutureManual(self.pSpi, self.FP_OnErrRtnRepealBankToFutureByFutureManual)
        # 系统运行时期货端手工发起冲正期货转银行错误回报
        self.h.tOnErrRtnRepealFutureToBankByFutureManual.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnRepealFutureToBankByFutureManual.restype = None
        self.FP_OnErrRtnRepealFutureToBankByFutureManual = CFUNCTYPE(None, POINTER(CThostFtdcReqRepealField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnRepealFutureToBankByFutureManual)
        self.h.tOnErrRtnRepealFutureToBankByFutureManual(self.pSpi, self.FP_OnErrRtnRepealFutureToBankByFutureManual)
        # 期货发起查询银行余额错误回报
        self.h.tOnErrRtnQueryBankBalanceByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnErrRtnQueryBankBalanceByFuture.restype = None
        self.FP_OnErrRtnQueryBankBalanceByFuture = CFUNCTYPE(None, POINTER(CThostFtdcReqQueryAccountField), POINTER(CThostFtdcRspInfoField))(self.__OnErrRtnQueryBankBalanceByFuture)
        self.h.tOnErrRtnQueryBankBalanceByFuture(self.pSpi, self.FP_OnErrRtnQueryBankBalanceByFuture)
        # 期货发起冲正银行转期货请求，银行处理完毕后报盘发回的通知
        self.h.tOnRtnRepealFromBankToFutureByFuture.argtypes = [c_void_p, c_void_p]
        self.h.tOnRtnRepealFromBankToFutureByFuture.restype = None
